# zcash-walletd

./: .gitignore  CHANGELOG.md  Cargo.toml  Rocket.toml  sample.env
.github/workflows/: build-macos.yaml
js/: Cargo.toml  test.js
js/src/: lib.rs
src/: account.rs  db.rs  lib.rs  main.rs  monitor.rs  notifier.rs  rpc.rs  scan.rs
